Upgrade to Kotlin 1.6.0 and remove hacks for JDK17